[package]
name = "drool"
version = "0.1.0"
authors = ["Michael Mroz <michael@mroz.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
exitcode = "1.1.2"
broom = "0.3.0"

[dev-dependencies]
quickcheck = "0.8.0"
quickcheck_macros = "0.8.0"